# schema_generator

./: .env.example  README.md  config.yaml  prompt_bird_mini_dev.md  pyproject.toml  run.py
benchmark/bird_mini_dev/: bird_mini_dev_bootstrap_summary.md
prompts/: dictionary_generation.md
reports/: SCHEMA_GENERATOR_ARTICLE.en.md  SCHEMA_GENERATOR_ARTICLE.md  dictionary_generation_error_report.md
src/: bootstrap_bird_mini_dev.py  compare_results_dictionary.py  dictionary_generation.py  llm.py
tests/: test_bootstrap_bird_mini_dev.py  test_compare_results_dictionary.py  test_dictionary_generation_schema.py  test_llm_config.py  test_llm_structured_calls.py  test_run.py
