[project]
name = "schema_matching"
version = "0.2.0"
description = ""
authors = [
    {name = "Leandro Mendes Ferreira"}
]
requires-python = ">=3.12.7, <3.13"
dependencies = [
    "beautifulsoup4>=4.6.3,<5.0.0",
    "bibtexparser>=1.2.0",
    "future>=0.18.2",
    "numpy>=1.20.1,<2.0.0",
    "pyparsing>=2.2.0,<3.0.0",
    "python-dateutil>=2.7.3,<3.0.0",
    "pytz>=2020.1,<2021.0",
    "selenium>=4.9.0",
    "six>=1.11.0,<2.0.0",
    "pandas>=2.2.3",
    "webdriver-manager>=3.8.5,<4.0.0",
    "pypaperbot>=1.4.1,<2.0.0",
    "undetected-chromedriver>=3.5.5,<4.0.0",
    "setuptools>=75.8.0,<76.0.0",
    "markdownify>=0.14.1,<0.15.0",
    "crossref>=0.1.2,<0.2.0",
    "backoff>=2.2.1,<3.0.0",
    "pyautogen>=0.7.3,<0.8.0",
    "langchain>=0.3.17,<0.4.0",
    "langchain-community>=0.3.16,<0.4.0",
    "langsmith>=0.3.4,<0.4.0",
    "llama-index>=0.12.15,<0.13.0",
    "pyyaml>=6.0.2,<7.0.0",
    "sentence-transformers>=3.4.1,<4.0.0",
    "lancedb>=0.19.0,<0.20.0",
    "duckdb>=1.2.0,<2.0.0",
    "splink>=4.0.6,<5.0.0",
    "scholarly>=1.7.11",
    "wrapt>=1.14.1",
    "langchain-google-genai>=2.0.10",
    "langchain-deepseek>=0.1.3",
    "openai>=1.78.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "dataprofiler[ml]>=0.13.3",
    "google-generativeai>=0.8.5",
    "google-genai>=1.16.1",
    "tf-keras>=2.16.0",
    "py-markdown-table>=1.3.0",
    "charset-normalizer>=3.4.3",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
